        option is used, which could result in a call of \code{nls}
        being terminated with a spurious error message.  This bug
        is most likely to arise on a 64-bit big-endian platform,
        such as a 64-bit SPARC build, but will occur with small
        probability on most platforms.  It is also present in R Core 
        versions of R.
}}

  \subsection{BUG FIX CORRESPONDING TO ONE IN A LATER R CORE RELEASE}{
  \itemize{
  \item Removed incorrect information from \code{help(call)}, as also
        done in R-3.0.2.
}}
}


\section{CHANGES IN VERSION RELEASED 2014-11-16}{

  \subsection{INTRODUCTION}{

  \itemize{ 
  \item This and the previous release of 2014-10-23 (which does not have
        a separate NEWS section) are minor updates to the 
        release of 2014-09-30, with fixes for a few problems, and a few 
        performance improvements.  Packages installed for pqR-2014-09-30 
        or pqR-2014-10-23 do not need to be reinstalled for this release.
}}
  \subsection{INSTALLATION, BUILDING, AND TESTING}{
  \itemize{
  \item For Mac OS X, a change has been made to allow use of the Accelerate 
        framework for the BLAS in OS X 10.10 (Yosemite), adapted from a patch 
        by R Core.
  \item A new test (var-lookup.R) for correctness of local vs. global symbol 
        bindings has been added, which is run with other tests done by 
        "make check".
}}
  \subsection{DOCUMENTATION UPDATES}{
    \itemize{
    \item The documentation on "contexts" in the R Internals manual has
          been updated to reflect a change made in pqR-2014-09-30.  (The
          internals manual has also been updated to reflect changes below.)
}}
  \subsection{PERFORMANCE IMPROVEMENTS}{
    \itemize{
    \item The speed of \code{for} loops has been improved by not bothering
          to set the index variable again if it is still set to the old
          value in its binding cell.
    \item Evaluation of symbols is now a bit faster when the symbol has a 